// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragAndDrop at 320 renders empty 1`] = `
"<Fragment>
  <t anySize={true} height={150} imageDefault={[undefined]} imageDeleted={[Function: mockConstructor]} imagePicked={[Function: mockConstructor]} showButton={true} showDeleteButton={true} width={150} />
  <styled.button onClick={[Function: clickAdd]}>
    +
  </styled.button>
</Fragment>"
`;

exports[`DragAndDrop at 320 renders mock as expected for: Pictures! 1`] = `
"<Fragment>
  <t anySize={true} height={150} imageDefault=\\"https://source.unsplash.com/random/150x150?sig=0\\" imageDeleted={[Function: mockConstructor]} imagePicked={[Function: mockConstructor]} showButton={true} showDeleteButton={true} width={150} />
  <styled.button onClick={[Function: clickRemove]}>
    X
  </styled.button>
</Fragment>"
`;

exports[`DragAndDrop at 768 renders empty 1`] = `
"<Fragment>
  <t anySize={true} height={300} imageDefault={[undefined]} imageDeleted={[Function: mockConstructor]} imagePicked={[Function: mockConstructor]} showButton={true} showDeleteButton={true} width={300} />
</Fragment>"
`;

exports[`DragAndDrop at 768 renders mock as expected for: Pictures! 1`] = `
"<Fragment>
  <t anySize={true} height={300} imageDefault=\\"https://source.unsplash.com/random/150x150?sig=0\\" imageDeleted={[Function: mockConstructor]} imagePicked={[Function: mockConstructor]} showButton={true} showDeleteButton={true} width={300} />
  <styled.button onClick={[Function: clickRemove]}>
    X
  </styled.button>
</Fragment>"
`;
